fix QA + change gap

--- a/packages/scss/src/components/comment/component.scss
+++ b/packages/scss/src/components/comment/component.scss
@@ -6,7 +6,7 @@
 	container: comment / inline-size;
 	display: flex;
 	flex-direction: column;
-	gap: var(--pr-t-spacings-100);
+	gap: var(--pr-t-spacings-50);
 	max-width: var(--components-comment-max-width);
 	align-items: var(--components-comment-align);
 	margin-left: var(--components-comment-margin);
